syntax = "proto3";

package sensateiot;
option csharp_namespace = "SensateService.Protobuf";

message TextMessage {
	string data = 1;
	string created_at = 2;
	double longitude = 3;
	double latitude = 4;
	string sensor_id = 5;
}

message TextMessageData {
	repeated TextMessage messages = 1;
}
